[gd_scene load_steps=15 format=2]

[ext_resource path="res://Reso/PNG/Bombs/Bomb_A.png" type="Texture" id=1]
[ext_resource path="res://Player/Detection.gd" type="Script" id=2]
[ext_resource path="res://Player/Bomb.gd" type="Script" id=3]
[ext_resource path="res://Player/Damage.gd" type="Script" id=4]
[ext_resource path="res://Reso/PNG/Bombs/Explosion_A_02.png" type="Texture" id=5]
[ext_resource path="res://Reso/PNG/Bombs/Explosion_A_04.png" type="Texture" id=6]
[ext_resource path="res://Reso/PNG/Bombs/Explosion_A_01.png" type="Texture" id=7]
[ext_resource path="res://Reso/PNG/Bombs/Explosion_A_03.png" type="Texture" id=8]
[ext_resource path="res://Reso/PNG/Bombs/Explosion_A_05.png" type="Texture" id=9]
[ext_resource path="res://World/radial_gradient.png" type="Texture" id=10]
[ext_resource path="res://Sounds/explosion.wav" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 32.5288

[sub_resource type="CircleShape2D" id=2]
radius = 162.038

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "Animate",
"speed": 10.0
} ]

[node name="Bomb" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.668167, -0.222733 )
scale = Vector2( 0.460589, 0.460589 )
texture = ExtResource( 1 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 1 )

[node name="Damage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
modulate = Color( 0.572549, 0.027451, 0.027451, 1 )
shape = SubResource( 2 )

[node name="BlowAnim" type="AnimatedSprite" parent="Damage"]
visible = false
position = Vector2( -1.49832, -2.62207 )
scale = Vector2( 1.66429, 1.66429 )
frames = SubResource( 3 )
animation = "Animate"

[node name="Light2D" type="Light2D" parent="Damage"]
position = Vector2( 0.624998, 0.374998 )
scale = Vector2( 0.106445, 0.106445 )
texture = ExtResource( 10 )
color = Color( 0.992157, 0.0156863, 0.0156863, 1 )

[node name="Sound" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 11 )
[connection signal="body_entered" from="Detection" to="Detection" method="_on_Detection_body_entered"]
[connection signal="body_entered" from="Damage" to="Damage" method="_on_Damage_body_entered"]
[connection signal="body_exited" from="Damage" to="Damage" method="_on_Damage_body_exited"]
[connection signal="animation_finished" from="Damage/BlowAnim" to="Damage" method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="Damage/Sound" to="Damage" method="_on_Sound_finished"]
